# lens-compat

./: README.md  lens-compat.cabal
Control/Lens/: Compat.hs
Data/Lens/: Common.hs  Lazy.hs
Data/Lens/Partial/: Common.hs  Lazy.hs
