name:               lens-compat
version:            0.2
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Lenses
author:             David Fox
copyright:          (c) 2015, David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/ddssff/lens-compat
bug-reports:        https://github.com/ddssff/lens-compat/issues
stability:          experimental
synopsis:           Shims to help convert data-lens code to lens
description:        Compile with this package to assist in the conversion of code
                    that uses the data-lens package to use lens instead.

library
  build-depends:
    base >= 4.2 && < 5,
    lens, mtl
  ghc-options:      -Wall
  exposed-modules:  Control.Lens.Compat,
                    Data.Lens.Common,
                    Data.Lens.Lazy,
                    Data.Lens.Partial.Common,
                    Data.Lens.Partial.Lazy
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/ddssff/lens-compat.git
